2013-09-16 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/internal/Exporter.h : Specific handling of containers (std::vector,
        std::deque, and std::list so that we use their faster range constructor when 
        we can, and so let the STL optimize how data is copied
        * include/Rcpp/api/meat/export.h : Implementation of the above

2013-09-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/InputParameter.h (Rcpp): Add 'const' case

	* inst/unitTests/cpp/Vector.cpp: New unit tests for std::vector
	conversions, using both int and double arguments
	* inst/unitTests/runit.Vector.R: R complement of these tests

2013-09-15  Romain Francois <romain@r-enthusiasts.com>

	* include/Rcpp/InputParameter.h : added the traits::input_parameter
	trait to add another layer of abstration.
	* include/Rcpp/macros/module.h : taking advantage of input_parameter
	to specialize how to work with module objects
	* src/attributes.cpp : using traits::input_parameter<T> instead of
	InputParameter<T>

2013-09-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/attributes.cpp : Precede closing '>' by space to avoid '>>'
	* inst/include/Rcpp/platform/compiler.h: Further refine #if test for
	'long long' by conditioning __LP64__ on also using clang/llvm

	* src/attributes.cpp : Precede closing '>' by space to avoid '>>'

2013-09-13  Romain Francois <romain@r-enthusiasts.com>

	* src/api.cpp : added "long long" to the capabilities function.
	* include/Rcpp/platform/compiler.h : demangling is definitely
	available on all mac versions using gcc. No point is testing for OSX
	version.
	* include/Rcpp/InputParameter.h : extra layer of abstraction to allow
	for custom handling of references etc ... used in RcppArmadillo
	* src/attributes.cpp : using InputParameter
	* DESCRIPTION: bump to 0.10.4.4

2013-09-12  Romain Francois <romain@r-enthusiasts.com>

	* include/Rcpp/platform/compiler.h : patch submitted by Murray for
	better support of long long type.